log
Wed, Mar 19, 2025  8:30:14 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  8:55:01 AM: 
 exercises.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
 tests:  0|0
537fbdc
Wed, Mar 19, 2025  8:56:15 AM: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:78:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
c60d161
Wed, Mar 19, 2025  8:56:55 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
e637857
Wed, Mar 19, 2025  9:04:25 AM: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  2|3
total_score: 20/70
6b0d859
Wed, Mar 19, 2025  9:05:27 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
29ddb8d
Wed, Mar 19, 2025  9:06:11 AM: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
86883cd
Wed, Mar 19, 2025  9:06:58 AM: 
 exercises.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  2|3
total_score: 20/70
884ea6e
Wed, Mar 19, 2025  9:21:53 AM: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  3|2
total_score: 40/70
d6611fa
Wed, Mar 19, 2025  9:26:59 AM: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  3|2
total_score: 40/70
3553070
mi., 19 de mar. de 2025 22:50:44: 
 tests:  3|2
total_score: 40/70
8110691
mi., 19 de mar. de 2025 22:52:27: 
 exercises.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  4|1
total_score: 50/70
856736d
mi., 19 de mar. de 2025 23:13:56: 
 exercises.c | 34 +++++++++++++++++++++++++++++++++-
 1 file changed, 33 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function 'parentesisBalanceados':
exercises.c:134:22: error: implicit declaration of function 'len' [-Wimplicit-function-declaration]
  134 |    int tallaString = len(cadena);
      |                      ^~~
exercises.c:157:26: error: statement with no effect [-Werror=unused-value]
  157 |       else(*(cadena + k) == ']')
      |           ~~~~~~~~~~~~~~~^~~~~~~
exercises.c:157:33: error: expected ';' before '{' token
  157 |       else(*(cadena + k) == ']')
      |                                 ^
      |                                 ;
  158 |       {
      |       ~                          
cc1.exe: all warnings being treated as errors
Compilation failed
ac25728
mi., 19 de mar. de 2025 23:21:40: 
 exercises.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function 'parentesisBalanceados':
exercises.c:155:26: error: statement with no effect [-Werror=unused-value]
  155 |       else(*(cadena + k) == ']')
      |           ~~~~~~~~~~~~~~~^~~~~~~
exercises.c:155:33: error: expected ';' before 'if'
  155 |       else(*(cadena + k) == ']')
      |                                 ^
      |                                 ;
  156 |          if(*caracter != '[') return 0;
      |          ~~                      
exercises.c:159:7: error: implicit declaration of function 'por'; did you mean 'pop'? [-Wimplicit-function-declaration]
  159 |       por(pila);
      |       ^~~
      |       pop
cc1.exe: all warnings being treated as errors
Compilation failed
1a28c70
